dons_tests/valid_kxi/instanced_dot.kxi
class MyClass {
    public int x;
}
void main(){
    MyClass c = new MyClass();
    int y = c.x;
}
