dons_tests/invalid_kxi/double_dec_parm.kxi
class MyClass { 
    public void myfunc(int x) {
        string x = "oops";
    }
}
void main(){}
